MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/Process_Flow_Step__c.object-meta.xml
<CustomObject>
    <label>Process Flow Step</label>
    <nameField>
        <displayFormat>PFS-{0000}</displayFormat>
        <label>Process Flow Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Flow Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>