MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Activate_On_Creation__c.field-meta.xml
<CustomField>
    <fullName>Activate_On_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate On Creation</label>
    <type>Checkbox</type>
</CustomField>