MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Assign_to_the_Collection_Associate__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_the_Collection_Associate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign to the Collection Associate</label>
    <type>Checkbox</type>
</CustomField>