MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Choose_Next_Owner__c.field-meta.xml
<CustomField>
    <fullName>Choose_Next_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Choose Next Owner</label>
    <type>Checkbox</type>
</CustomField>