MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Dont_Activate__c.field-meta.xml
<CustomField>
    <fullName>Dont_Activate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dont Activate</label>
    <type>Checkbox</type>
</CustomField>