MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Dont_show_In_Reopen__c.field-meta.xml
<CustomField>
    <fullName>Dont_show_In_Reopen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dont show In Reopen</label>
    <type>Checkbox</type>
</CustomField>