MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Duration_To_Complete_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_To_Complete_In_Days__c</fullName>
    <label>Duration To Complete In Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>