MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Expression__c.field-meta.xml
<CustomField>
    <fullName>Expression__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>