MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Fields_Display_Query__c.field-meta.xml
<CustomField>
    <fullName>Fields_Display_Query__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fields Display Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>