MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Include_In_Reopen__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Reopen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Reopen</label>
    <type>Checkbox</type>
</CustomField>