MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Is_Assigned_TO__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned_TO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Assigned TO</label>
    <type>Checkbox</type>
</CustomField>