MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Is_Process_End__c.field-meta.xml
<CustomField>
    <fullName>Is_Process_End__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Process End</label>
    <type>Checkbox</type>
</CustomField>