MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Is_Single_Level_Required_Info__c.field-meta.xml
<CustomField>
    <fullName>Is_Single_Level_Required_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Single Level Required Info</label>
    <type>Checkbox</type>
</CustomField>