MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/isSingleUser__c.field-meta.xml
<CustomField>
    <fullName>isSingleUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSingleUser</label>
    <type>Checkbox</type>
</CustomField>