MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Owner_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Owner_Assignment__c</fullName>
    <label>Owner Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Line Manager</fullName>
            </value>
            <value>
                <fullName>Initiator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>