MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Process_Flow__c.field-meta.xml
<CustomField>
    <fullName>Process_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Flow</label>
    <referenceTo>Process_Flow__c</referenceTo>
    <relationshipLabel>Process Flow Steps</relationshipLabel>
    <relationshipName>Process_Flow_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>