MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/section_Name__c.field-meta.xml
<CustomField>
    <fullName>section_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>section Name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>