MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Setp_No__c.field-meta.xml
<CustomField>
    <fullName>Setp_No__c</fullName>
    <label>Step No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>