MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Step_Auto_Complete__c.field-meta.xml
<CustomField>
    <fullName>Step_Auto_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Step Auto Complete</label>
    <type>Checkbox</type>
</CustomField>