MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/Step_Entry_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Step_Entry_Criteria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Step Entry Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>