MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/fields/View_review_comments__c.field-meta.xml
<CustomField>
    <fullName>View_review_comments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View review comments</label>
    <type>Checkbox</type>
</CustomField>