MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Process_Flow__c</columns>
    <columns>Department__c</columns>
    <columns>Department_Queue__c</columns>
    <columns>Description__c</columns>
    <columns>Duration_To_Complete_In_Days__c</columns>
    <columns>Setp_No__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>