MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/listViews/Broker_Awards.listView-meta.xml
<ListView>
    <fullName>Broker_Awards</fullName>
    <columns>NAME</columns>
    <columns>section_Name__c</columns>
    <columns>Step_Name__c</columns>
    <columns>Section_Number__c</columns>
    <columns>Setp_No__c</columns>
    <columns>Department__c</columns>
    <columns>Department_Queue__c</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>Is_Reject_Button_Required__c</columns>
    <columns>Is_Required_More_Button_Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process_Flow__c</field>
        <operation>equals</operation>
        <value>Broker Awards</value>
    </filters>
    <label>Broker Awards</label>
</ListView>