MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/listViews/Mall_Stand_New_Stand_Design.listView-meta.xml
<ListView>
    <fullName>Mall_Stand_New_Stand_Design</fullName>
    <columns>NAME</columns>
    <columns>section_Name__c</columns>
    <columns>Step_Name__c</columns>
    <columns>Section_Number__c</columns>
    <columns>Setp_No__c</columns>
    <columns>Duration_To_Complete_In_Hourss__c</columns>
    <columns>Active__c</columns>
    <columns>Is_Process_End__c</columns>
    <columns>Department__c</columns>
    <columns>Owner_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process_Flow__c</field>
        <operation>equals</operation>
        <value>Mall Stand- New Stand Design</value>
    </filters>
    <label>Mall Stand- New Stand Design</label>
</ListView>