MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Step__c/listViews/Marketing_Office_Available.listView-meta.xml
<ListView>
    <fullName>Marketing_Office_Available</fullName>
    <columns>NAME</columns>
    <columns>section_Name__c</columns>
    <columns>Step_Name__c</columns>
    <columns>Section_Number__c</columns>
    <columns>Setp_No__c</columns>
    <columns>Duration_To_Complete_In_Hourss__c</columns>
    <columns>Active__c</columns>
    <columns>Is_Process_End__c</columns>
    <columns>Department__c</columns>
    <columns>Description__c</columns>
    <columns>Department_Queue__c</columns>
    <columns>Owner_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process_Flow__c</field>
        <operation>equals</operation>
        <value>Office Branding- With Office Details</value>
    </filters>
    <label>Marketing - Office Available</label>
</ListView>